force-app/main/default/objects/Installation__c/Installation__c.object-meta.xml
<CustomObject>
    <label>Installation</label>
    <nameField>
        <label>Installation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>