force-app/main/default/objects/Installation__c/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <label>Data da instalação</label>
    <type>Date</type>
</CustomField>