force-app/main/default/objects/Installation__c/fields/Installation_Time__c.field-meta.xml
<CustomField>
    <fullName>Installation_Time__c</fullName>
    <label>Tempo de instalação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>