force-app/main/default/objects/Installation__c/fields/Solar_Plant__c.field-meta.xml
<CustomField>
    <fullName>Solar_Plant__c</fullName>
    <label>Solar Plant</label>
    <referenceTo>Solar_Plant__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>