force-app/main/default/objects/Installation__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Técnico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>